created hero section and started feature section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body>
+    <!------------------------------------------------Navbar-------------------------------------------------------->
     <nav class="bg-deepBlue">
         <div class="relative w-[1080px] mx-auto flex items-center justify-between">
 
 
-            <!--Logo-->
+            <!--------------------------------------------Logo------------------------------------------------->
+
             <a href="" class="cursor-pointer py-7 pr-7">
                 <img src="images/logo.svg" width="125px" height="30px">
             </a>
@@ -75,5 +77,91 @@
             </div>
         </div>
     </nav>
+
+    <!----------------------------------------------Hero Section---------------------------------------------------->
+
+    <section class="relative bg-deepBlue overflow-x-clip">
+
+            <div class="w-10/12 max-w-[1080px] flex sm:flex-col lg:flex-row justify-between items-center mx-auto ">
+                <!--left part-->
+                <div class="space-y-8">
+                    <h1 class="font-mullish font-bold text-[40px] leading-[1.2] text-white">Power your finance, grow your business</h1>
+                    <div class="w-6 h-1 bg-greenLight"></div>
+                    <p class="font-mullish text-[18px] leading-7 text-white opacity-70">
+                        Accept payments from customers. Automate payouts to vendors & employees. Never run out of working capital.
+                    </p>
+                    <button class="bg-lightBlue text-white  py-[14px] px-[18px] rounded-md font-mullish font-bold
+          hover:bg-lightBlue500 transition-all duration-200">Sign Up Now</button>
+                </div>
+                <!--right part-->
+                <img src="./images/hero-illustration.jpg" alt="" class="w-full max-w-[680px]">
+            </div>
+
+            <!--shape part-->
+            <div class="w-[103%] absolute left-0 right-0 ">
+                <img src="./images/hero-shape.svg" alt="" class="w-full object-fill">
+            </div>
+
+    </section>
+
+    <!---------------------------------------------Feature Section-------------------------------------------------->
+    
+    <section class="relative mt-[190px] overflow-hidden">
+        <img src="images/feature-section1-dottedrows.png" loading="lazy" 
+        width="233"
+        height="167"
+        class="absolute -top-[8rem] left-[10rem] inline-block">
+
+        <img src="images/feature-section1-dottedrows.png" loading="lazy" 
+        width="233" 
+        height="167"
+        class="absolute top-[3rem] right-0 inline-block rotate-180">
+
+        <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
+            <!-- heaading -->
+            <h2 class="font-mullish text-black text-center text-2xl font-extrabold">Accept Payments with Razorpay Payment Suite</h2>
+            <div class="h-1 w-6 bg-greenLight mx-auto mt-4 mb-6"></div>
+
+            <!-- content box -->
+            <div>
+                <!-- left section -->
+                <div>
+                    <h3>Supercharge your business with the all-powerful <span class="text-lightBlue">Payment Gateway</span></h3>
+                    <ul>
+                        <li>
+                            <span>100+ Payment Methods</span>
+                        </li>
+                        <li>
+                            <span>Success Rate</span>
+                        </li>
+                        <li>
+                            <span>Superior Checkout Experience</span>
+                        </li>
+                        <li>
+                            <span>Easy to Integrate</span>
+                        </li>
+                        <li>
+                            <span>Instant Settlements from day 1</span>
+                        </li>
+                        <li>
+                            <span>In-depth Reporting and Insights</span>
+                        </li>
+                    </ul>
+
+                    <!-- for button and hyperlink -->
+                    <div>
+                        <button>Sign Up Now</button>
+                        <div>
+                            <a href="">Know More</a>
+                            <i></i>
+                        </div>
+                    </div>
+                </div>
+                <img src="images/payment-suite.png" alt="">
+            </div>
+
+        </div>
+    </section>
+
 </body>
 </html>
