--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 <!----------------------------------------------Feature2------------------------------------------------------------>
 
-            <div class="w-[1080px] grid grid-cols-3 gap-8 mt-12">
+        <div class="w-[1080px] grid grid-cols-3 gap-8 mt-12">
 
             <!-- box1 -->
             <div class="w-full min-h-[15rem] rounded-md featureCard relative cursor-pointer">
@@ -483,7 +483,7 @@
 
     <!-----------------------------------------------Boxes------------------------------------------------------->
 
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full gap-4 my-14">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full gap-4 my-14">
                     <!-- Box 1 -->
                     <div class="w-full min-h-[15rem] relative cursor-pointer featureCard2">
                         <!-- Common Box Content -->
@@ -664,7 +664,7 @@
     </section>
 
 
-    <!------------------------------------------FeatureSection4-------------------------------------------->
+    <!----------------------------------------------FeatureSection4-------------------------------------------------->
 
     <section style="background-size: 100% 100%; padding-top: 12rem;padding-bottom: 12rem;" class=" relative w-full bg-[url(images/core-features-sectionBg.svg)] bg-repeat bg-cover bg-center pt-[11rem] pb-[500px] mt-14 overflow-x-clip z-[1000]">
         <div class="relative w-10/12 max-w-[1080px] mx-auto pt-4">
@@ -721,11 +721,36 @@
                 <div>
                     <img src="images/secure-icon.svg" alt="">
                     <h3 class="font-mullish text-white font-extrabold text-lg my-4">Secure</h3>
-                    <p class="text-white font-mullish opacity-[0.87]">PCI DSS Level 1 compliant solution which removes your burden of regulatory compliance.
-
-</p>
+                    <p class="text-white font-mullish opacity-[0.87]">PCI DSS Level 1 compliant solution which removes your burden of regulatory compliance.</p>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <!-------------------------------------------FeatureSection5----------------------------------------------------->
+
+    <section class="bg-[#f5f8fe] relative -mt-[200px] pt-40 pb-12 z-[100]">
+        <div class="w-10/12 max-w-[1080px] relative mx-auto pt-4 flex flex-row">
+            <!-- leftsection -->
+            <div class="flex flex-col my-4 py-10 relative max-w-[calc(100%-500px)] justify-center">
+                <h2 class="font-mullish font-bold text-2xl text-deepBlueHead">Join the 50,00,000+ businesses using Razorpay</h2>
+                <div class="w-6 h-1 bg-greenLight my-4 mb-10"></div>
+                <p class="font-mullish opacity-80">We make it easier for you to focus on building great products while we work on simplifying your payments. Become one of us by joining thousands of our happy users and simplify the online payment experience for your customers.
+                </p>
+                <p class=" font-mullish mt-6 opacity-80">Focus on your business while we handle the complexities of payments for you.</p>
+            </div>
+            <!-- image  -->
+            <div class="h-[500px] w-[500px] relative overflow-y-hidden">
+                <div style="background: linear-gradient(180deg,#f4f8ff,#fff0);"
+                class="absolute w-full h-[150px] top-0 z-50"></div>
+
+                <img src="images/comanies.png" alt=""
+                loading="lazy"
+                class="absolute  h-auto object-cover companiesList">
+
+                <div style="background: linear-gradient(0deg,#f4f8ff,#fff0);"
+                class="absolute w-full h-[150px] bottom-0 z-50"></div>
             </div>
         </div>
     </section>
