Added button in featureSection5

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
     <!-------------------------------------------FeatureSection5----------------------------------------------------->
 
     <section class="bg-[#f5f8fe] relative -mt-[200px] pt-40 pb-12 z-[100]">
-        <div class="w-10/12 max-w-[1080px] relative mx-auto pt-4 flex flex-row">
+        <div class="w-10/12 max-w-[1080px] relative mx-auto pt-4 justify-between flex flex-row">
             <!-- leftsection -->
             <div class="flex flex-col my-4 py-10 relative max-w-[calc(100%-500px)] justify-center">
                 <h2 class="font-mullish font-bold text-2xl text-deepBlueHead">Join the 50,00,000+ businesses using Razorpay</h2>
@@ -739,6 +739,12 @@
                 <p class="font-mullish opacity-80">We make it easier for you to focus on building great products while we work on simplifying your payments. Become one of us by joining thousands of our happy users and simplify the online payment experience for your customers.
                 </p>
                 <p class=" font-mullish mt-6 opacity-80">Focus on your business while we handle the complexities of payments for you.</p>
+                <button class="bg-lightBlue text-white mt-6 w-[160px] py-[14px] px-[18px] rounded-md font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200 flex flex-row ">Get Started
+                    <svg viewBox="0 0 24 12" focusable="false" class="w-[14px] h-[18px] ml-3">
+                        <path fill="currentColor" d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z">
+                        </path>
+                    </svg>
+                </button>
             </div>
             <!-- image  -->
             <div class="h-[500px] w-[500px] relative overflow-y-hidden">
@@ -746,13 +752,18 @@
                 class="absolute w-full h-[150px] top-0 z-50"></div>
 
                 <img src="images/comanies.png" alt=""
-                loading="lazy"
                 class="absolute  h-auto object-cover companiesList">
 
                 <div style="background: linear-gradient(0deg,#f4f8ff,#fff0);"
                 class="absolute w-full h-[150px] bottom-0 z-50"></div>
             </div>
         </div>
+    </section>
+
+    <!------------------------------------------TestimonialSection---------------------------------------------------->
+
+    <section>
+        
     </section>
 
     <script>
