--- a/index.html
+++ b/index.html
@@ -762,8 +762,129 @@
 
     <!------------------------------------------TestimonialSection---------------------------------------------------->
 
-    <section>
-        
+    <section class="relative ">
+        <div class="w-11/12 max-w-[1300px] mx-auto relative py-20">
+            <img src="images/feature-section1-dottedrows.png" alt=""
+            loading="lazy"
+            class="absolute w-[200px] top-[8rem] left-[2rem] -z-10">
+            <h2 class="font-mullish font-bold text-2xl text-deepBlueHead text-center">An Experience <br> People Love to Talk About</h2>
+            <div class="w-6 h-1 bg-greenLight mx-auto my-4"></div>
+            
+            <!-- leftButton -->
+            <button 
+            class="absolute w-[100px] h-[100px] bg-[#f4f8ff] rounded-full left-0 top-1/2 flex justify-center items-center">
+                <div class="w-[65%] h-[65%] bg-[#f4f8ff] mix-blend-multiply rounded-full flex justify-center items-center">
+                    <i data-feather="chevron-right"
+                        class="stroke-[5px] w-6 h-6 text-gray-400 rotate-180">
+                    </i>
+                </div>
+            </button>
+
+            <!-- RightButton -->
+            <button 
+            class="absolute w-[100px] h-[100px] bg-[#f4f8ff] rounded-full right-0 top-1/2 flex justify-center items-center">
+                <div class="w-[65%] h-[65%] bg-[#f4f8ff] mix-blend-multiply rounded-full flex justify-center items-center">
+                    <i data-feather="chevron-right"
+                        class="stroke-[5px] w-6 h-6 text-gray-400">
+                    </i>
+                </div>
+            </button>
+
+            <!-- mainContent -->
+            <div class="slide-row flex flex-row max-w-[960px] mx-auto my-20 space-x-[10rem] items-center overflow-x-scroll overflow-y-hidden w-[100%] scroll-smooth">
+                <div class="testimonial1">
+                    <!-- leftImage -->
+                    <div>
+                        <img src="images/shubam_unacademy.png" alt="" loading="lazy"
+                        class=" rounded-xl"
+                        width="320px "
+                        height="320px">
+                    </div>
+
+                    <!-- rightSide -->
+                    <div class="max-w-[380px]">
+                        <div class="">
+                            <img src="images/quotes.svg" alt=""
+                            loading="lazy"
+                            width="35px"
+                            height="40px"
+                            class="-mb-2">
+                            <p class="font-mullish text-3xl font-extralight">Acquire Customers From New Customer Segments</p>
+                            <a href="#" class="text-grayText italic underline">Learn More</a>
+                        </div>
+                        <div>
+                            <h3 class="font-mullish font-extrabold text-2xl">Subham Kumar</h3>
+                            <p class="font-mullish font-medium">Product Manager</p>
+                            <img src="images/unacademy.1c618f03.svg" alt=""  height="40px" width="213.33px" class="mt-4">
+                        </div>
+                    </div>                    
+                </div>
+                <div class="testimonial1">
+                    <!-- leftImage -->
+                    <div>
+                        <img src="images/shubam_unacademy.png" alt="" loading="lazy"
+                        class=" rounded-xl"
+                        width="320px "
+                        height="320px">
+                    </div>
+
+                    <!-- rightSide -->
+                    <div class="max-w-[380px]">
+                        <div class="">
+                            <img src="images/quotes.svg" alt=""
+                            loading="lazy"
+                            width="35px"
+                            height="40px"
+                            class="-mb-2">
+                            <p class="font-mullish text-3xl font-extralight">Acquire Customers From New Customer Segments</p>
+                            <a href="#" class="text-grayText italic underline">Learn More</a>
+                        </div>
+                        <div>
+                            <h3 class="font-mullish font-extrabold text-2xl">Subham Kumar</h3>
+                            <p class="font-mullish font-medium">Product Manager</p>
+                            <img src="images/unacademy.1c618f03.svg" alt=""  height="40px" width="213.33px" class="mt-4">
+                        </div>
+                    </div>                    
+                </div>
+                <div class="testimonial1">
+                    <!-- leftImage -->
+                    <div>
+                        <img src="images/shubam_unacademy.png" alt="" loading="lazy"
+                        class=" rounded-xl"
+                        width="320px "
+                        height="320px">
+                    </div>
+
+                    <!-- rightSide -->
+                    <div class="max-w-[380px]">
+                        <div class="">
+                            <img src="images/quotes.svg" alt=""
+                            loading="lazy"
+                            width="35px"
+                            height="40px"
+                            class="-mb-2">
+                            <p class="font-mullish text-3xl font-extralight">Acquire Customers From New Customer Segments</p>
+                            <a href="#" class="text-grayText italic underline">Learn More</a>
+                        </div>
+                        <div>
+                            <h3 class="font-mullish font-extrabold text-2xl">Subham Kumar</h3>
+                            <p class="font-mullish font-medium">Product Manager</p>
+                            <img src="images/unacademy.1c618f03.svg" alt=""  height="40px" width="213.33px" class="mt-4">
+                        </div>
+                    </div>                    
+                </div>
+            </div>
+
+            <!-- SixDots -->
+            <div class="flex flex-row max-auto space-x-2 justify-center">
+                <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+                <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+                <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+                <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+                <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+                <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+            </div>
+        </div>
     </section>
 
     <script>
