added last section

--- a/index.html
+++ b/index.html
@@ -821,15 +821,58 @@
                 
             </div>
             <!-- SixDots -->
-            <div class="flex flex-row max-auto space-x-2 justify-center">
+            <div class="flex flex-row max-auto space-x-2 justify-center pb-10">
                 <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
-                <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
+                <div class="h-[10px] w-[10px] bg-blue-300 rounded-full"></div>
                 <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
                 <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
                 <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
                 <div class="h-[10px] w-[10px] bg-gray-300 rounded-full"></div>
             </div>
         </div>
+    </section>
+
+
+    <!--------------------------------------------LastSection------------------------------------------------------>
+
+    <section class="bg-[url(images/CTABg.svg)] bg-no-repeat bg-cover w-full h-full relative ctaSection min-h-[510px]">
+        <!-- mainContentbox -->
+        <div class="w-11/12 max-w-[1080px] relative flex flex-row items-center justify-between mx-auto  space-x-20 pt-20">
+
+            <!-- leftPart  -->
+            <div class="flex flex-col gap-5 mt-12 max-w-[600px]">
+                <h2 class="font-mullish font-bold text-2xl text-white">Supercharge your business with Razorpay</h2>
+                <div class="w-6 h-1 bg-greenLight "></div>
+                <p class="font-mullish text-white">Sign up now to experience the future of payments and offer your customers the best checkout experience.</p>
+
+                <ul class="flex flex-row flex-wrap gap-x-11 gap-y-3 text-white">
+                    <li class="font-mullish text-white flex flex-row">
+                        <i data-feather="check" class="text-greenLight"></i>
+                        <span>Quick Onboarding</span>
+                    </li>
+                    <li class="font-mullish text-white flex flex-row">
+                        <i data-feather="check" class="text-greenLight"></i>
+                        <span>Access to entire product suite</span>
+                    </li>
+                    <li class="font-mullish text-white flex flex-row">
+                        <i data-feather="check" class="text-greenLight"></i>
+                        <span>API access</span>
+                    </li>
+                    <li class="font-mullish text-white flex flex-row">
+                        <i data-feather="check" class="text-greenLight"></i>
+                        <span>24x7 support</span>
+                    </li>
+                </ul>
+
+            <button class="min-w-[32px] font-mullish text-sm font-bold bg-white text-lightBlue300 border flex rounded-sm items-center hover:text-lightBlue500 transition-all py-3 px-4 duration-200 place-self-start">Sign Up
+                <svg viewBox="0 0 24 24" focusable="false" class="w-[20px] h-[20px] ">
+                    <path fill="currentColor" d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path>
+                </svg>
+            </button>
+        </div>
+
+            <!-- rightSide image  -->
+            <img src="images/ctaImg.svg" alt="" width="240px" height="282px" class="mt-16 pt-3">
     </section>
 
     <script>
