--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="hover.css">
 </head>
-<body>
+<body class="overflow-x-clip">
     <!---------------------------------------------CTA BANNER----------------------------------------------->
     <div class="w-full h-[52px] bg-white relative">
       <div class="w-0 h-0 absolute top-0 bottom-0 left-0 border-b-[52px] border-b-lightBlue border-r-[40px] border-r-transparent z-[14]"></div>
